--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
 
         Note: Contact information can be located on the footer.<br><br>
 
-        <strong><a href="web_page_terms_of_service.pdf">Terms of Service</a></strong>
+        <strong><a href="terms_of_service.pdf">Terms of Service</a></strong>
         <br><br>
 
-        <strong><a href="web_page_privacy_policy.pdf">Privacy Policy</a></strong>
+        <strong><a href="privacy_policy.pdf">Privacy Policy</a></strong>
 
     </main>
     <footer>
