--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="container">
-        <img src="Books.png" alt="Book Stack" width="409">
+        <img src="books.png" alt="Book Stack" width="409">
     </div>
 
     <main><!--Introducing the topic to the reader-->
