--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <main><!--Introducing the topic to the reader-->
-        <h2>Introduction</h2>
+        <br><br><h2>Introduction</h2>
         <p> One of the most fascinating aspects of today&apos;s day and age is all of the technology that surrounds us. It simplifies our lives, giving us access to all sorts of things, such information, entertainment, and AI generated content, all in an instant. This however, becomes one of society&apos;s greatest challenges. With internet addiction currently on the rise, now it becomes harder than ever to put down the device and try to connect to the real world. After all, it&apos;s very easy to fall into the rabbit hole that is the internet. 
             Prolonged use of technology can lead to various sorts of problems down the road.<br><br> That is why it becomes more important than ever to start developing hobbies outside of technology. One of the easiest hobbies to pick up is that of reading. As someone who uses technology on a regular basis, I can testify to the benefits that this hobby can bring. Aside from learning new things and new ideas, reading for me served as a way to manage my stress. I aim to highlight some of the many benefits that reading can bring.
             </p>
