--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </nav>
 
     <div class="container">
-        <img src="books.png" alt="Book Stack" width="409">
+        <img src="books.png" alt="Book display" width="409">
+          <i><small><br>Image: Book display <br> Source: Pixaby</small></i>
     </div>
 
     <main><!--Introducing the topic to the reader-->
