--- a/content.html
+++ b/content.html
@@ -30,9 +30,10 @@
 
     <div class="container">
         <img src="Book2.png" alt="Open Book" width="409">
+           <i><small><br>Image: Open Book <br> Source: Pixaby</small></i>
     </div>
     <main><!--Informing readers on the benefits of reading-->
-        <h2>Reading and its Benefits</h2>
+        <br><br><h2>Reading and its Benefits</h2>
     <ul>
       <li><h3><strong>Vocabulary and Communication</strong></h3>
       One of the main benefits of reading is the improvement of <em>vocabulary</em>. Vocabulary is essential in many different parts of one&apos;s life. This includes not only job and college searching, but also in conversation. It has been proven that the more one engages in reading, the more their vocabulary is <em>enhanced</em>. This means improved communication skills. Effective communication is an important part of one&apos;s life, and it&apos;s important to take advantage of this opportunity that books provide. 
