--- a/about.html
+++ b/about.html
@@ -30,11 +30,11 @@
 
     
     <main><!--Informing readers on the author and nature of the website, as well as providing answers to a few questions-->
-        <h2>About the author</h2>
+        <br><br><h2>About the author</h2>
         <p>The author of this website is a web development student currently taking a class on web design. This website is a personal website on reading and why it is an important hobby that everyone should have. 
         </p>
 
-        <h3><strong>FAQ</strong></h3>
+        <br><h3><strong>FAQ</strong></h3>
         <!--Question one-->
         <section>
             <ul>
