--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
 
     <div class="container">
-        <img src="Books.png" alt="Display of Books" width="409">
+        <img src="books.png" alt="Display of Books" width="409">
         <i><small><br>Image: Book display <br> Source: Pixaby</small></i>
     </div>
 
